// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/kanban/calculations/KanbanCalculationOptions > base case 1`] = `
<div>
  <div
    class="Combobox CalculationOptions"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="CalculationOptions__control"
    >
      <div
        class="CalculationOptions__value-container"
      >
        
        <div
          class="CalculationOptions__single-value"
        >
          Count
        </div>
        
        <input
          aria-controls="cl-0"
          aria-expanded="false"
          autocomplete="off"
          class="CalculationOptions__input"
          readonly=""
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`components/kanban/calculations/KanbanCalculationOptions > with menu open 1`] = `
<div>
  <div
    class="Combobox CalculationOptions"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="CalculationOptions__control"
    >
      <div
        class="CalculationOptions__value-container"
      >
        
        <div
          class="CalculationOptions__single-value"
        >
          Count
        </div>
        
        <input
          aria-activedescendant="cl-1-option-0"
          aria-controls="cl-1"
          aria-expanded="true"
          autocomplete="off"
          class="CalculationOptions__input"
          readonly=""
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    <div
      class="Combobox__menu CalculationOptions__menu "
    >
      <div
        class="CalculationOptions__menu-list"
        id="cl-1"
        role="listbox"
      >
        
        <div
          aria-selected="true"
          class="CalculationOptions__option CalculationOptions__option--is-focused CalculationOptions__option--is-selected"
          id="cl-1-option-0"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption active"
          >
            <span>
              Count
               
              
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-1-option-1"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-1-option-2"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Not Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-1-option-3"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Percent Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-1-option-4"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Percent Not Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-1-option-5"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Value
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-1-option-6"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Unique Values
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/kanban/calculations/KanbanCalculationOptions > with submenu open 1`] = `
<div>
  <div
    class="Combobox CalculationOptions"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="CalculationOptions__control"
    >
      <div
        class="CalculationOptions__value-container"
      >
        
        <div
          class="CalculationOptions__single-value"
        >
          Count
        </div>
        
        <input
          aria-activedescendant="cl-2-option-6"
          aria-controls="cl-2"
          aria-expanded="true"
          autocomplete="off"
          class="CalculationOptions__input"
          readonly=""
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    <div
      class="Combobox__menu CalculationOptions__menu "
    >
      <div
        class="CalculationOptions__menu-list"
        id="cl-2"
        role="listbox"
      >
        
        <div
          aria-selected="true"
          class="CalculationOptions__option CalculationOptions__option--is-selected"
          id="cl-2-option-0"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption active"
          >
            <span>
              Count
               
              
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-2-option-1"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-2-option-2"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Not Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-2-option-3"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Percent Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-2-option-4"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Percent Not Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="cl-2-option-5"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Value
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option CalculationOptions__option--is-focused"
          id="cl-2-option-6"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Unique Values
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            <div
              class="dropdown-submenu"
              style="top: -10px; left: 0px;"
            >
              <div
                class="drops "
              >
                <span>
                  Status
                </span>
              </div>
              <div
                class="drops active"
              >
                <span>
                  Property 1
                </span>
              </div>
              <div
                class="drops "
              >
                <span>
                  Property 2
                </span>
              </div>
              <div
                class="drops "
              >
                <span>
                  Property 3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
